# votescraper

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Justfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: lint-python.sh
.claude/rules/: analysis-framework.md  analytic-workflow.md  commit-workflow.md  data-model.md  database.md  documentation.md  html-pitfalls.md  scraper-architecture.md  testing.md
.github/workflows/: ci.yml
Analytic_Methods/: 00_overview.md  01_DATA_vote_matrix_construction.md  02_EDA_descriptive_statistics.md  03_EDA_vote_participation.md  04_EDA_agreement_matrix_heatmap.md  05_IDX_rice_index.md  06_IDX_party_unity_scores.md  07_IDX_effective_number_of_parties.md  08_IDX_loyalty_and_maverick_scores.md  09_DIM_principal_component_analysis.md  10_DIM_correspondence_analysis.md  11_DIM_umap_tsne_visualization.md  12_DIM_w_nominate.md  13_DIM_optimal_classification.md  14_BAY_beta_binomial_party_loyalty.md  15_BAY_irt_ideal_points.md  16_BAY_hierarchical_legislator_model.md  17_BAY_posterior_predictive_checks.md  18_CLU_hierarchical_clustering.md  19_CLU_kmeans_voting_patterns.md  20_NET_covoting_network.md  21_NET_bipartite_bill_legislator.md  22_NET_centrality_measures.md  23_NET_community_detection.md  24_PRD_vote_prediction.md  25_PRD_bill_passage_prediction.md  26_TSA_ideological_drift.md  27_TSA_changepoint_detection.md  28_CLU_latent_class_mixture_models.md
analysis/: __init__.py  canonical_ideal_points.py  clustering.py  clustering_report.py  dashboard.py  db.py  eda.py  experiment_monitor.py  experiment_runner.py  indices.py  init_strategy.py  irt.py  irt_beta_experiment.py  irt_report.py  network.py  network_report.py  nlp_features.py  pca.py  pca_overrides.yaml  pca_report.py  phase_utils.py  prediction.py  prediction_report.py  report.py  run_context.py  synthesis.py  synthesis_detect.py  synthesis_report.py  tuning.py  umap_report.py  umap_viz.py  viz_helpers.py
analysis/01_eda/: bill_lifecycle.py  eda.py  eda_report.py  geographic.py
analysis/02_pca/: pca.py  pca_report.py
analysis/02b_ega/: ega_phase.py  ega_phase_report.py
analysis/02c_mca/: mca.py
analysis/03_mca/: mca.py  mca_report.py
analysis/03_umap/: umap_report.py  umap_viz.py
analysis/04_irt/: irt.py  irt_report.py
analysis/04_umap/: umap_report.py  umap_viz.py
analysis/04b_irt_2d/: irt_2d.py  irt_2d_report.py
analysis/04c_ppc/: ppc.py  ppc_data.py  ppc_report.py
analysis/05_clustering/: clustering.py  clustering_report.py
analysis/05_irt/: irt.py  irt_report.py
analysis/05b_lca/: lca.py  lca_report.py
analysis/06_irt_2d/: irt_2d.py  irt_2d_report.py
analysis/06_network/: network.py
analysis/06b_bifactor/: bifactor.py  bifactor_report.py
analysis/06b_network_bipartite/: bipartite.py  bipartite_report.py
analysis/07_hierarchical/: hierarchical.py  hierarchical_report.py  model_spec.py
analysis/07_indices/: indices.py
analysis/07b_hierarchical_2d/: hierarchical_2d.py  hierarchical_2d_report.py
analysis/08_ppc/: ppc.py  ppc_report.py
analysis/08_prediction/: prediction.py  prediction_report.py
analysis/09_beta_binomial/: beta_binomial.py
analysis/09_clustering/: clustering.py  clustering_report.py
analysis/10_hierarchical/: hierarchical.py  hierarchical_report.py  irt_linking.py
analysis/10_lca/: lca.py  lca_report.py
analysis/11_network/: network.py  network_report.py
analysis/11_synthesis/: synthesis.py  synthesis_data.py  synthesis_detect.py  synthesis_report.py
analysis/12_bipartite/: bipartite.py  bipartite_report.py
analysis/12_profiles/: profiles.py  profiles_data.py  profiles_report.py
analysis/13_cross_session/: cross_session.py  cross_session_data.py  cross_session_report.py
analysis/13_indices/: indices.py  indices_report.py
analysis/14_beta_binomial/: beta_binomial.py  beta_binomial_report.py
analysis/14_external_validation/: external_validation.py  external_validation_data.py  external_validation_report.py
analysis/14b_external_validation_dime/: external_validation_dime.py  (+1 more)
docs/: 2d-irt-deep-dive.md  79th-report-audit.md  79th-senate-party-posteriors.md  84th-legislature-common-space-analysis.md  analytic-flags.md  architecture.md  audit-findings-deep-dive.md  bespoke-report-extraction.md  beta-binomial-deep-dive.md  bill-text-nlp-deep-dive.md  bipartite-network-deep-dive.md  cfa-irt-dimensionality-deep-dive.md  clustering-deep-dive.md  code-audit-2026-03-02.md  common-space-ideal-points.md  convergence-deep-dive.md  data-dictionary.md  dime-cfscore-deep-dive.md  dynamic-irt-convergence-diagnosis.md  eda-deep-dive.md  experiment-framework-deep-dive.md  external-validation-results.md  future-bill-text-analysis.md  hierarchical-4-chain-experiment.md  hierarchical-irt-deep-dive.md  horseshoe-effect-and-solutions.md  how-irt-works.md  irt-deep-dive.md  irt-field-survey.md  irt-identification-strategies.md  irt-sign-identification-deep-dive.md  joint-hierarchical-irt-diagnosis.md  joint-model-deep-dive.md  latent-class-deep-dive.md  lda-ideology-projection.md  lessons-learned.md  loo-cv-observation-mismatch.md  mca-deep-dive.md  method-evaluation.md  network-deep-dive.md  (+19 more)
scripts/: chrome_cookies.py  kanfocus_receiver.py
tests/: factories.py  test_beta_binomial.py  test_bill_text.py  test_bipartite.py  test_canonical_ideal_points.py  test_cli.py  test_clustering.py  test_common_space.py  test_cross_session.py  test_dashboard.py  test_data_integrity.py  test_db_loading.py  test_django_admin.py  test_django_api.py  test_django_loader.py  test_django_models.py  test_dynamic_irt.py  test_eda.py  test_extract.py  test_hierarchical.py  test_indices.py  test_init_strategy.py  test_integration_pipeline.py  test_irt.py  test_irt_2d.py  test_kanfocus_crossval.py  test_kanfocus_fetcher.py  test_kanfocus_output.py  test_kanfocus_parser.py  test_kanfocus_session.py  test_kanfocus_slugs.py  test_lca.py  test_mca.py  test_merge_special.py  test_model_legislation.py  test_network.py  test_nlp_features.py  test_output.py  test_pca.py  test_phase_utils.py  (+12 more)
(+299 files in other folders)
